Fixing FAQ link and home image module gap

--- a/Sitetheory/TemplateCustomBundle/Resources/public/css/justiceDemocratsOverride.css
+++ b/Sitetheory/TemplateCustomBundle/Resources/public/css/justiceDemocratsOverride.css
@@ -71,46 +71,46 @@ strong {
 }
 
 /* Make home page tagline bigger */
-@media (min-width: 48em)
+@media (min-width: 48em) {
     .block-intro__heading {
         font-size: 4.2rem;
     }
+}
 
+/* Darken home page form background */
 
-    /* Darken home page form background */
-
-    .block-intro__form {
-        background: rgba(190, 190, 190, 0.8);
-    }
-    /* Facebook feed styling */
-    .block-landing__post-preview #cff .cff-header {
-        font-family: "Alfa Slab One", cursive;
-        font-weight: normal;
-        letter-spacing: .04em;
-        padding-bottom: 15px;
-        line-height: 28px;
-        border-bottom: 7px solid #3F77DD;
-    }
-    .block-landing__post-preview #cff .cff-header span {
-        display: inline-block;
-        vertical-align: middle;
-    }
-    .block-landing__post-preview #cff .cff-header .fa-facebook {
-        margin-right: 21px;
-        vertical-align: middle;
-    }
-    .block-landing__post-preview #cff a .cff-page-name {
-        color: #000 !important; }
-    .block-landing__post-preview #cff a:hover .cff-page-name {
-        color: #6BA2AE !important; }
-    #cff .cff-author {
-        margin-bottom: 5px; }
-    .cff-text {
-        font-family: 'Helvetica', 'Arial', sans-serif;
-        font-size: 15px;
-        line-height: 1.4; }
-    @media (min-width: 960px) {
-        .block-landing__post-preview .cff-wrapper {
-            max-height: 880px;
-            overflow-y: scroll; }
-    }
+.block-intro__form {
+    background: rgba(190, 190, 190, 0.8);
+}
+/* Facebook feed styling */
+.block-landing__post-preview #cff .cff-header {
+    font-family: "Alfa Slab One", cursive;
+    font-weight: normal;
+    letter-spacing: .04em;
+    padding-bottom: 15px;
+    line-height: 28px;
+    border-bottom: 7px solid #3F77DD;
+}
+.block-landing__post-preview #cff .cff-header span {
+    display: inline-block;
+    vertical-align: middle;
+}
+.block-landing__post-preview #cff .cff-header .fa-facebook {
+    margin-right: 21px;
+    vertical-align: middle;
+}
+.block-landing__post-preview #cff a .cff-page-name {
+    color: #000 !important; }
+.block-landing__post-preview #cff a:hover .cff-page-name {
+    color: #6BA2AE !important; }
+#cff .cff-author {
+    margin-bottom: 5px; }
+.cff-text {
+    font-family: 'Helvetica', 'Arial', sans-serif;
+    font-size: 15px;
+    line-height: 1.4; }
+@media (min-width: 960px) {
+    .block-landing__post-preview .cff-wrapper {
+        max-height: 880px;
+        overflow-y: scroll; }
+}
